manifests/couchdb/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: couchdb
  labels:
    app.kubernetes.io/managed-by: ngarvey-homelab
