manifests/couchdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-livesync
  namespace: couchdb
  labels:
    app.kubernetes.io/managed-by: ngarvey-homelab
  annotations:
    tailscale.com/http-redirect: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - obsidian-livesync
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb
                port:
                  number: 5984
